--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ background-attachment: fixed; */
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"  ;
 }
 
-.form{
+#form{
     background-color: whitesmoke;
     width: 450px;
-    margin: 6vh auto 0 auto;
+    margin: 2vh auto 0 auto;
     border-radius: 10px;
     padding: 20px;
    
@@ -20,7 +20,7 @@ background-attachment: fixed; */
 h1{
     text-align: center;
 }
-.form button{
+#form button{
  background-color: rgb(106, 112, 112);
  color: white;
  border-color: rgb(106, 112, 112);
@@ -42,8 +42,11 @@ h1{
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
-    font-size: 17px;
+}
+.form-group label{
     font-weight: bold;
+    font-size: 17px;
+
 }
 
 .pointer-radio{
