--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ background-attachment: fixed; */
 }
 
 #form{
-    background-color: whitesmoke;
+    background-color:whitesmoke;
     width: 450px;
-    margin: 3vh auto 0 auto;
+    margin: 7vh auto 0 auto;
     border-radius: 10px;
     padding: 20px;
    
@@ -54,6 +54,7 @@ h1{
     font-size: 14px;
     margin-top: 20px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .form-group input{
